--- a/index.html
+++ b/index.html
@@ -194,36 +194,8 @@
 <p>振兴国货，国家也在行动。中国品牌日，老字号发展计划等一系列行动的开展，彰显了国家进一步发展的决心。</p>
 </div>
 		   <!--时间轴-->
-<div>
- <section class="intro">
-  <div class="container">
-    <h1 style="font-weight: bold;font-size: 24px">国家政策大事记</h1>
-  </div>
-</section>
-<section class="timeline">
-  <ul>
-    <li>
-      <div style="color: rgba(255,255,255,1.00);line-height: 25px">
-        <time>2006年</time> 商务部发布《关于保护和促进老字号发展的若干意见》，我国鼓励老字号企业开展资本运作，支持符合条件的企业上市。
-      </div>
-    </li>
-    <li>
-      <div style="color: rgba(255,255,255,1.00);line-height: 25px">
-        <time>2017年</time>国务院批准将每年5月10日设立为中国品牌日。
-      </div>
-    </li>
-    <li>
-      <div style="color: rgba(255,255,255,1.00);line-height: 25px">
-        <time>2018年</time>发改委等七部委正式对外发布中国品牌日标识。
-      </div>
-    </li>
-    <li>
-      <div style="color: rgba(255,255,255,1.00);line-height: 25px">
-        <time>2019年</time>商务部、国家邮政局、中国消费者协会组织指导“双品网购节”系列活动，全面促进品牌消费与品质消费。
-      </div>
-    </li>
-  </ul>
-</section></div>
+     <div style="text-align: center;margin-top: 20px"><img src="img/nnn.png" width="50%" height="50%" alt=""/></div>
+
 
 
 <div class="aa" style="text-indent: 2em; margin-top: -11px;"><p>振兴国货，还需要网购平台和国货品牌多方合作。近年来，天猫、京东都先后和国货品牌开展多方面合作，如通过天猫“国潮来了”主题销售活动、京东国货海外全球售平台等。产品发力，平台联动，强强联手，推动国货不仅火爆国内，更畅销海外。</p>
@@ -236,7 +208,7 @@
 
 
 <div class="aa" style="text-indent:2em;margin-top: 20px;margin-bottom: 50px"><p><strong>时光更迭间，“国货”们承载着一个又一个时代的国民记忆。</strong></p><p>它们或简约质朴，或潮酷有型，变的是风格与款式，不变的是功能价值背后蕴含的精神价值。</p><p>这些散落在生活各个角落的“小物件”，是令人感到“小确幸”的符号；千千万万个“小确幸”汇聚在一起，又映射了百余年来中国经历的“大时代”变迁。</p></div>
-<div class="aa" style="width: 100%; text-align: center; background-color: rgba(127,9,11,1.00); color: rgba(219,211,211,1.00); padding-bottom: 23px; font-size: 16px;"><strong>❤ 策划&制作：</strong>胡麟薇、黄盈佳、廖朗星
+<div class="aa" style="width: 100%; text-align: center; background-color: rgba(127,9,11,1.00); color: rgba(219,211,211,1.00); padding-bottom: 23px; font-size: 16px;"><strong>❤ 策划&制作：</strong>胡麟薇、黄盈佳、廖朗星、刘思懿
   <br><strong>❤ 文本&数据：</strong>黄盈佳、廖朗星
 <br><strong>❤ 前端&设计：</strong>胡麟薇
 <br><strong>❤ 参考资料：</strong>中国青年报社社会调查中心，周丽娜. 基于受众视角的国货老品牌回归现象探究[D].湖南师范大学,2015.
